Fixed alignment of items in paste-submit

--- a/src/asset/pinnwand.scss
+++ b/src/asset/pinnwand.scss
@@ -174,6 +174,10 @@ section.file-part div.file-meta {
     margin-bottom: .0625rem;
 }
 
+section.paste-submit {
+    align-items: center;
+}
+
 section.paste-submit, div.paste-actions {
     background-color: var(--color1);
     padding: .5rem;
